force-app/main/default/objects/SDG_Field__c/SDG_Field__c.object-meta.xml
<CustomObject>
    <label>Sortable Data Grid Field</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sortable Data Grid Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>