force-app/main/default/objects/SDG_Field__c/fields/FieldOrder__c.field-meta.xml
<CustomField>
    <fullName>FieldOrder__c</fullName>
    <label>FieldOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>