force-app/main/default/objects/SDG_Field__c/fields/Filter_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Filter_Sequence__c</fullName>
    <description>Use this field to assign the sequence number of the field used in the Universal filter. This assignment will govern the filtering of data in the SDG for this field, when user filters value for the assigned numbered field from Universal filter. For e.g: If the industry field in the SDG is assigned Filter Sequence 1, because in Universal filter Industry field is at first position. On selecting &apos;Technology&apos; for Industry in Universal filter, SDG will also gets filtered data where Industry value equals to &apos;Technology&apos; according to filter sequence assignment.</description>
    <label>Filter Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>