force-app/main/default/objects/SDG_Field__c/fields/Grouping_Query__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Query__c</fullName>
    <description>Use this field to write an aggregate SOQL query to display count/sum/min/max/avg in a column.
E.g.: “Select count(Id), AccountId from Contact where AccountId in &lt;&lt;AccountId&gt;&gt; group by AccountId”
This query will specify number of Contacts for an Account.</description>
    <label>Grouping Query</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>