force-app/main/default/objects/SDG_Field__c/fields/Hide_Filter__c.field-meta.xml
<CustomField>
    <fullName>Hide_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Filter</label>
    <type>Checkbox</type>
</CustomField>