force-app/main/default/objects/SDG_Field__c/fields/Image_field_API__c.field-meta.xml
<CustomField>
    <fullName>Image_field_API__c</fullName>
    <label>Image Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>