force-app/main/default/objects/SDG_Field__c/fields/is_valid_field__c.field-meta.xml
<CustomField>
    <fullName>is_valid_field__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable/Disable field display.  If the package thinks there&apos;s something wrong with the config it will automatically set this value to false.</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>