force-app/main/default/objects/SDG_Field__c/fields/Override_Label__c.field-meta.xml
<CustomField>
    <fullName>Override_Label__c</fullName>
    <inlineHelpText>Only put a value here if you want to override the default field label (useful when the field is on another object from the core object - eg createdby.name</inlineHelpText>
    <label>Override Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>