force-app/main/default/objects/SDG_Field__c/fields/Parent_Field_Name_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Name_Grouping__c</fullName>
    <label>Parent Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>