force-app/main/default/objects/SDG_Field__c/fields/Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL__c</fullName>
    <inlineHelpText>Only applicaple for String type of fields, merge fields can also be added for any related field of base object eg: &lt;&lt;Id&gt;&gt; or &lt;&lt;Account.Name&gt;&gt; 
NOTE: Merge fields are case sensitive.</inlineHelpText>
    <label>Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>