force-app/main/default/objects/SDG_Field__c/fields/sdg__c.field-meta.xml
<CustomField>
    <fullName>sdg__c</fullName>
    <label>sdg</label>
    <referenceTo>SDG__c</referenceTo>
    <relationshipName>SDGFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>