force-app/main/default/objects/SDG_Field__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Use this field to provide relative or absolute URL along with the parameters to redirect to the desired page. E.g.: Redirect the user to a report where the filters are passed within &lt;&lt; &gt;&gt; in URL to display the desired result.</description>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>